--- a/Rebuild-ELY-main.tex
+++ b/Rebuild-ELY-main.tex
@@ -47,7 +47,7 @@
 %----------------------------------------------------------------------------------------
 
 
-\includepdf{Rebuild-Ebook-Front-vp-3} % Include an image as the full page background, must be the dimensions of the paper to fill the page entirely. Can be a jpg etc., not only pdf.
+\includepdf{./Images/Rebuild-Ebook-Front-vp-3} % Include an image as the full page background, must be the dimensions of the paper to fill the page entirely. Can be a jpg etc., not only pdf.
 
 
 %\typeout{The text height is \the\textheight}
@@ -56,7 +56,7 @@
 
 %\cleardoublepage
 
-\input{0-1-testimonials}
+\input{./Chapters/0-1-testimonials}
 
 %----------------------------------------------------------------------------------------
 %        INSIDE COVER
@@ -124,7 +124,7 @@ The rights of Graham Boyd and Jack Reardon to be identified as the authors of th
         \bigskip
         
    {\scshape  
-	\small Release 1.1.1 (non-ergodic added, Ch. 6)\\  
+	\small Release 1.1.2 (Less restrictive licencing)\\  
  \par}
 
 
@@ -147,7 +147,7 @@ Editing by Anna Kierstan
 
 This book is sold subject to the condition that it shall not, by way of trade or otherwise, be lent, re-sold, hired out, or otherwise circulated without the publisher's prior consent in any form of binding or cover other than that in which it is published and without a similar condition including this condition being imposed on the subsequent purchaser.
 
-This book is licenced under Creative Commons CC BY-NC-ND, excluding any elements from other copyrighted works. Consult this licence for details \url{https://creativecommons.org/licenses/by-nc-nd/4.0/legalcode}. You may make copies of this book for non-commercial purposes, in unadapted form, with full attribution. No remixed, transformed, or derivative works may be distributed. This book is provided without warranty, neither explicit nor implicit.
+This book is licenced under Creative Commons CC BY-SA, excluding any elements from other copyrighted works. Consult this licence for details \url{https://creativecommons.org/licenses/by-sa/4.0/legalcode}. You may make copies of this book for non-commercial purposes, in unadapted form, with full attribution. No remixed, transformed, or derivative works may be distributed. This book is provided without warranty, neither explicit nor implicit.
 
 \bigskip
 
@@ -156,7 +156,7 @@ This book is published in at least one electronic form under the standard Evolut
 
 \hfill
 \begin{center}
-\includegraphics[width=0.35\textwidth]{./Images/by-nc-nd}
+\includegraphics[width=0.35\textwidth]{./Images/by-sa}
 \end{center}
 
 
@@ -189,8 +189,8 @@ This book is published in at least one electronic form under the standard Evolut
 \listoffigures
 
 
-\input{./0-preface-0.5} 
-\input{./0-3-CoverArt-Meaning}
+\input{./Chapters/0-preface-0.5} 
+\input{./Chapters/0-3-CoverArt-Meaning}
 
 %----------------------------------------------------------------------------------------
 %        MAIN MATTER
@@ -203,41 +203,41 @@ This book is published in at least one electronic form under the standard Evolut
 %\partplain{Einstein and Picasso}
 \partdescription{Art and Physics}{In which we introduce the foundations of this book: your experienced reality is a consequence of how you look at the world, i.e., the lenses you look through. Cubism, relativity and quantum mechanics give us new lenses on business and economics.}
 \label{part:intro}
-\input{./1-emergence-theme-0.5}
-\input{./2-Emergence-Einstein-Picasso-0.5}
+\input{./Chapters/1-emergence-theme-0.5}
+\input{./Chapters/2-Emergence-Einstein-Picasso-0.5}
 
 
 
 %\partplain{Economy}
 \partdescription{Economy}{These chapters give an overview of how the economy as it is has emerged, and propose ways of reinventing the economy, and creating the one that can rebuild our capacity to thrive: the Economy of the Free. Drawing on apartheid as a metaphor you'll see why our current structuring of companies cannot deliver the economy our society needs, how the FairShares Commons addresses that issue, and how a new approach to economics can address the issues of neoclassical economics. \newline\newline If you are an investor or a founder, especially if you are expressing your values and beliefs around impact, sutainability, circularity, or regeneration, you will see how to protect your companies continuing to express your intent long after later investors have come in, and even after you are no longer involved.}
 \label{part:economy}
-\input{./3-how-do-we-know-our-economy-0.5}
-\input{./4-all-about-ownership-0.5}
-\input{./5-how-do-I-change-my-economy-0.5}
-\input{./6-general-theory-economies-0.5}
+\input{./Chapters/3-how-do-we-know-our-economy-0.5}
+\input{./Chapters/4-all-about-ownership-0.5}
+\input{./Chapters/5-how-do-I-change-my-economy-0.5}
+\input{./Chapters/6-general-theory-economies-0.5}
 
 
 \partdescription{You}{We humans are the alpha and omega of society, its economy, and our organisations. These chapters introduce you to how your meaning-making stories create your self-identity, and the unique reality you experience. They are the lenses you use to look at everything through. Your fluidity in the 28 thought forms of transformational thinking determine your capacity to grasp a nebulous, VUCA world, and what you can do to harness tension in your life to become who you can be, and achieve what you want to achieve,  in all arenas of your life, by growing your identity, and bringing your unique reality closer to actuality. All this happens on the foundations, and within the boundaries, of your fixed nature. And it is all nebulous, unknowable.}
 %\partplain{You}
 \label{exit}
 \label{part:you}
-\input{./7-how-do-I-know-myself-0.5}
-\input{./8-meaning-making-0.5}
-\input{./9-sense-making-0.5}
-\input{./10-nature-0.5}
-\input{./11-integration-0.5}
+\input{./Chapters/7-how-do-I-know-myself-0.5}
+\input{./Chapters/8-meaning-making-0.5}
+\input{./Chapters/9-sense-making-0.5}
+\input{./Chapters/10-nature-0.5}
+\input{./Chapters/11-integration-0.5}
 
 
 
 \partdescription{Organisations}{Let's look at the organisation as a living, meaning-making being, just like you are, except that each cell of an organisation is a human being. It depends on humans to act as its eyes, ears, and mouth. Using this lens, you can see what ought to change, across all aspects; from legal incorporation as a free company, e.g. using  the FairShares Commons, through having tasks and roles structured using dynamic governance, to developmental inter-personal and intra-personal interactions.}
 %\partplain{Organisations}
  \label{part:organisations}
-\input{./12-who-is-your-organisation-0.5}
-\input{./13-human-0.5}
-\input{./14-tasks-0.5}
-\input{./15-incorporation-0.5}
-\input{./16-creating-your-FSC}
-\input{./16-ecosystem-0.5}
+\input{./Chapters/12-who-is-your-organisation-0.5}
+\input{./Chapters/13-human-0.5}
+\input{./Chapters/14-tasks-0.5}
+\input{./Chapters/15-incorporation-0.5}
+\input{./Chapters/16-creating-your-FSC}
+\input{./Chapters/16-ecosystem-0.5}
 
 
 
@@ -245,7 +245,7 @@ This book is published in at least one electronic form under the standard Evolut
 \partdescription{Turning to Action}{We're almost at the end of the book; here's the final transfusion of hope, energy, and motivation to act; along with greater clarity on how to act to make the best possible sustainable difference rebuilding our world into a regenerative one, where all life can thrive. \newline\newline By now, whatever your roles in society and the economy; whether investor, founder, staff, family, friend, citizen, customer, supplier, etc., by now you have seen what you could do to construct the conditions you need to fully express who you are, your beliefs and values through your work; and to do at work every day what gives you meaning and energy. \newline\newline From insight into action.}
 %\partplain{Turning to Action}
  \label{part:action}  
-\input{./17-conclusion-0.5}
+\input{./Chapters/17-conclusion-0.5}
 
 
 
@@ -260,13 +260,13 @@ This book is published in at least one electronic form under the standard Evolut
 \backmatter
 
 
-\input{./acknowledgements-0.5}
-%\input{./About}
+\input{./Chapters/acknowledgements-0.5}
+
 \partdescription{Appendix}{}
 
 
 
-\input{./18-appendix-deeper-general-theory-economies-0.5}
+\input{./Chapters/18-appendix-deeper-general-theory-economies-0.5}
 
 \addcontentsline{toc}{chapter}{Bibliography}
 \printbibliography % Output the bibliography
